--- a/src/resources/jamtaba.qrc
+++ b/src/resources/jamtaba.qrc
@@ -37,6 +37,8 @@
         <file>discard.png</file>
         <file>level high.png</file>
         <file>level low.png</file>
+        <file>horizontal_layout.png</file>
+        <file>vertical_layout.png</file>
     </qresource>
     <qresource prefix="/flags">
         <file>flags/ad.png</file>
