Fixing the colors of Black listed plugins

--- a/Client/src/resources/jamtaba.css
+++ b/Client/src/resources/jamtaba.css
@@ -16,7 +16,7 @@ PreferencesDialog #buttonAddVstScanFolder{
     margin-right: 24px;
 }
 
-PreferencesDialog #BlackBoxText{
+PreferencesDialog #blackListWidget{
     background-color: black;
     color: orange;
 }
